
    MAPREDUCE-6635. Unsafe long to int conversion in UncompressedSplitLineReader
    and IndexOutOfBoundsException. (Junping Du via vvasudev)

    MAPREDUCE-6645. TestWordStats outputs logs under directories other than
    target/test-dir. (Gabor Liptak via aajisaka)

    MAPREDUCE-6580. Test failure: TestMRJobsWithProfiler.
    (Eric Badger via aajisaka)

Release 2.7.2 - 2016-01-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6425. ShuffleHandler passes wrong "base" parameter to getMapOutputInfo
    if mapId is not in the cache. (zhihai xu via devaraj)

    MAPREDUCE-6426. TestShuffleHandler#testGetMapOutputInfo is failing.
    (zhihai xu via devaraj)

    MAPREDUCE-6439. AM may fail instead of retrying if RM shuts down during the
    allocate call. (Anubhav Dhoot via kasha)

    MAPREDUCE-6442. Stack trace is missing when error occurs in client protocol
    provider's constructor (Chang Li via ozawa)

    MAPREDUCE-6474. ShuffleHandler can possibly exhaust nodemanager file
    descriptors (Kuhu Shukla via jlowe)

    MAPREDUCE-6472. MapReduce AM should have java.io.tmpdir=./tmp to be
    consistent with tasks (Naganarasimha G R via jlowe)

    MAPREDUCE-5948. org.apache.hadoop.mapred.LineRecordReader does not handle
    multibyte record delimiters well (Vinayakumar B, Rushabh Shah, and Akira
    AJISAKA via jlowe)

    MAPREDUCE-6481. LineRecordReader may give incomplete record and wrong
    position/key information for uncompressed input sometimes. (Zhihai Xu via
    jlowe)

    MAPREDUCE-5982. Task attempts that fail from the ASSIGNED state can
    disappear (Chang Li via jlowe)

    MAPREDUCE-6492. AsyncDispatcher exit with NPE on
    TaskAttemptImpl#sendJHStartEventForAssignedFailTask (Bibin A Chundatt via
    jlowe)

    MAPREDUCE-6518. Set SO_KEEPALIVE on shuffle connections (Chang Li via
    jlowe)

    MAPREDUCE-6273. HistoryFileManager should check whether summaryFile exists to 